# Aletheia

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile.fly  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-fly.yml  rollback-fly.yml
Django Application/: requirements.txt
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
frontend/: .env.example  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/analysis/: ResultDisplay.tsx  UploadZone.tsx  index.ts
frontend/src/components/layout/: Layout.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  LoadingScreen.tsx  PrivacyBanner.tsx  Progress.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/pages/: AnalyzePage.old.tsx  AnalyzePage.tsx  HistoryPage.tsx  HomePage.tsx  NotFoundPage.tsx  ResultsPage.tsx  SettingsPage.tsx
frontend/src/services/: analysis-service.ts  api-client.ts  index.ts
frontend/src/store/: analysis-store.ts  index.ts  theme-context.tsx
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: api.ts  components.ts  index.ts
frontend/src/utils/: index.ts
infrastructure/docker/: Dockerfile.api  Dockerfile.worker
infrastructure/kubernetes/: README.md  api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  resources.yaml  worker-deployment.yaml
scripts/: check_production.sh  docker-entrypoint.sh
src/: manage.py
src/accounts/: __init__.py  models.py
src/accounts/api/: __init__.py  urls.py
src/accounts/migrations/: 0001_initial.py
src/aletheia/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
src/aletheia/settings/: __init__.py  base.py  development.py  flyio.py  production.py  testing.py
src/core/: __init__.py  constants.py  decorators.py  exceptions.py  middleware.py  types.py
src/core/management/commands/: runsslserver.py
src/core/utils/: __init__.py  formatting.py  logging.py  security.py  validation.py
src/dashboard/: __init__.py  models.py
src/dashboard/api/: __init__.py  urls.py
src/detection/: __init__.py  apps.py
src/detection/api/: __init__.py  schema.py  serializers.py  urls.py  views.py
src/detection/management/commands/: runserver_quiet.py
src/detection/migrations/: 0001_initial.py
src/detection/models/: __init__.py  analysis.py  media.py  report.py
src/detection/services/: __init__.py  analysis_service.py  media_service.py  report_service.py
src/detection/tasks/: __init__.py  analysis.py
src/detection/web/: __init__.py  urls.py
src/ml/: __init__.py  config.py
src/ml/architectures/: __init__.py  attention_modules.py  base.py  efficientnet_lstm.py  ensemble.py
src/ml/inference/: __init__.py  batch_processor.py  engine.py  explainability.py
src/ml/preprocessing/: __init__.py  face_detector.py  transforms.py  video_processor.py
src/templates/: dev_home.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_core.py  test_preprocessing.py
