# =============================================================================
# Aletheia - Enterprise Deepfake Detection Platform
# Python Project Configuration (PEP 517/518)
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Project Metadata
# =============================================================================

[project]
name = "aletheia"
version = "1.0.0"
description = "Enterprise-grade deepfake detection platform using advanced deep learning"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Aletheia Team", email = "team@aletheia.ai" }
]
maintainers = [
    { name = "Aletheia Team", email = "team@aletheia.ai" }
]
keywords = [
    "deepfake",
    "detection",
    "deep-learning",
    "computer-vision",
    "video-analysis",
    "face-recognition",
    "pytorch",
    "django",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video :: Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# =============================================================================
# Dependencies
# =============================================================================

dependencies = [
    # Django Framework
    "Django>=4.2,<5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=23.5",
    "django-storages>=1.14.0",
    
    # Authentication
    "djangorestframework-simplejwt>=5.3.0",
    "PyJWT>=2.8.0",
    
    # Async & Background Tasks
    "celery[redis]>=5.3.0",
    "django-celery-results>=2.5.0",
    "django-celery-beat>=2.5.0",
    "redis>=5.0.0",
    
    # Database
    "psycopg2-binary>=2.9.9",
    
    # Deep Learning
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.12",
    "einops>=0.7.0",
    
    # Computer Vision
    "opencv-python>=4.8.0",
    "Pillow>=10.1.0",
    "albumentations>=1.3.1",
    
    # Face Detection
    "facenet-pytorch>=2.5.3",
    "dlib>=19.24.0",
    "mediapipe>=0.10.8",
    
    # Data Processing
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    
    # API & Serialization
    "drf-spectacular>=0.26.0",
    "pydantic>=2.5.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "httpx>=0.25.0",
    
    # Monitoring
    "sentry-sdk>=1.38.0",
    "structlog>=23.2.0",
    
    # Report Generation
    "weasyprint>=60.0",
    "Jinja2>=3.1.2",
]

# =============================================================================
# Optional Dependencies
# =============================================================================

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=21.0.0",
    "hypothesis>=6.92.0",
    
    # Code Quality
    "ruff>=0.1.8",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    
    # Django Stubs
    "django-stubs>=4.2.7",
    "djangorestframework-stubs>=3.14.5",
    
    # Debugging
    "django-debug-toolbar>=4.2.0",
    "ipython>=8.18.0",
    "ipdb>=0.13.13",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

ml = [
    # Additional ML tools
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    "optuna>=3.5.0",
    "pytorch-lightning>=2.1.0",
]

production = [
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.25.0",
    "whitenoise>=6.6.0",
]

# =============================================================================
# Entry Points
# =============================================================================

[project.scripts]
aletheia = "aletheia.cli:main"

[project.urls]
Homepage = "https://github.com/aletheia/aletheia"
Documentation = "https://docs.aletheia.ai"
Repository = "https://github.com/aletheia/aletheia"
Changelog = "https://github.com/aletheia/aletheia/blob/main/CHANGELOG.md"
Issues = "https://github.com/aletheia/aletheia/issues"

# =============================================================================
# Tool Configuration
# =============================================================================

# -----------------------------------------------------------------------------
# Setuptools
# -----------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

# -----------------------------------------------------------------------------
# Black (Code Formatter)
# -----------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# -----------------------------------------------------------------------------
# isort (Import Sorter)
# -----------------------------------------------------------------------------

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "migrations", ".git"]
known_django = ["django", "rest_framework"]
known_first_party = ["aletheia", "core", "detection", "ml", "accounts", "dashboard"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# -----------------------------------------------------------------------------
# Ruff (Linter)
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "B904",   # raise from within except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004"]

# -----------------------------------------------------------------------------
# MyPy (Type Checker)
# -----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "facenet_pytorch.*",
    "mediapipe.*",
    "dlib.*",
    "albumentations.*",
    "timm.*",
    "einops.*",
    "celery.*",
    "weasyprint.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "aletheia.settings.development"

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aletheia.settings.testing"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests", "src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
